--- a/cart.htm
+++ b/cart.htm
@@ -52,7 +52,7 @@
 
     <!--section a-->
     <div class="w3-bar w3-black">
-        <a href="coca-cola.htm" class="w3-bar-item w3-button w3-mobile "
+        <a href="index.html" class="w3-bar-item w3-button w3-mobile "
             style="width:20%; background-color:#1a330 ; font-family:verdana;">Home</a>
         <a href="about.html" class="w3-bar-item w3-button w3-mobile "
             style="width:20%; background-color:#1a330; font-family:verdana;">About us</a>
